Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14294

Warning when adding a subproject using a JSON wizard

XMLWordPrintable

    • 0ff8b9e283b82d51789353e1f26d23d9068909fb

      I getting every time warnings of
      bool JsonWizardFileGenerator::allDone(const JsonWizard *wizard, Core::GeneratedFile *file, QString *errorMessage)
      function ( https://qt.gitorious.org/qt-creator/qt-creator/source/50fe3585a890fdbb5b6b8598bd8ffe97c036b52d:src/plugins/projectexplorer/jsonwizard/jsonwizardfilegenerator.cpp#L208 ) : it warns me about failed try to open subproject. But I am already successfully add subproject to my project tree. BTW, I trying to add new subproject by clicking RMB->"New subproject..."

      Here is my function in what my plugin perform add subprojects: http://pastebin.com/pcAzAXG6 .

      Please tell me where I need to dig to solve my problem?

        For Gerrit Dashboard: QTCREATORBUG-14294
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            hunger Tobias Hunger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes