Json Wizard: Fix unsetting of attributes

This did trigger all kinds of side-effects, one of them was

Task-number: QTCREATORBUG-14294
Change-Id: If39f827828e9c5a2559bd6b3b5392ac819fbd931
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>